--- a/public/index.html
+++ b/public/index.html
@@ -193,51 +193,115 @@
             color: #fff;
             background-color: #5bc0de;
         }
+
+        .nav-tabs .nav-link {
+            border-top-left-radius: 0.5rem;
+            border-top-right-radius: 0.5rem;
+        }
     </style>
 </head>
 <body>
 
-
-<div class="row">
-    <div class="col-md-12 col-sm-12">
-        <div class="funkyradio" id="radios">
-            <div class="funkyradio-success">
-                <input type="radio" name="radio" id="1m"/>
-                <label for="1m">1M</label>
+<div class="p-3">
+    <ul class="nav nav-tabs" id="myTab" role="tablist">
+        <li class="nav-item" role="presentation">
+            <button class="nav-link active" id="home-tab" data-bs-toggle="tab" data-bs-target="#mercedes" type="button"
+                    role="tab" aria-controls="home" aria-selected="true">
+                <img src="./icons/Mercedes-Benz_free_logo.svg"
+                     alt="mercedes" width="50" height="50">
+            </button>
+        </li>
+        <li class="nav-item" role="presentation">
+            <button class="nav-link" id="profile-tab" data-bs-toggle="tab" data-bs-target="#toyota" type="button"
+                    role="tab" aria-controls="profile" aria-selected="false">
+                <img src="./icons/Toyota_EU.svg" alt="toyota" width="50"
+                     height="50">
+            </button>
+        </li>
+    </ul>
+    <div class="tab-content" id="myTabContent">
+        <div class="tab-pane fade show active" id="mercedes" role="tabpanel" aria-labelledby="home-tab">
+            <div class="row">
+                <div class="col-md-12 col-sm-12">
+                    <div class="funkyradio" id="radios">
+                        <div class="funkyradio-success">
+                            <input type="radio" name="radio" id="1m"/>
+                            <label for="1m">1M</label>
+                        </div>
+                        <div class="funkyradio-success">
+                            <input type="radio" name="radio" id="2f"/>
+                            <label for="2f">2F</label>
+                        </div>
+                        <div class="funkyradio-success">
+                            <input type="radio" name="radio" id="2m"/>
+                            <label for="2m">2M</label>
+                        </div>
+                        <div class="funkyradio-success">
+                            <input type="radio" name="radio" id="3f"/>
+                            <label for="3f">3F</label>
+                        </div>
+                        <div class="funkyradio-success">
+                            <input type="radio" name="radio" id="3m"/>
+                            <label for="3m">3M</label>
+                        </div>
+                        <div class="funkyradio-success">
+                            <input type="radio" name="radio" id="4f"/>
+                            <label for="4f">4F</label>
+                        </div>
+                        <div class="funkyradio-success">
+                            <input type="radio" name="radio" id="4m"/>
+                            <label for="4m">4M</label>
+                        </div>
+                    </div>
+                </div>
             </div>
-            <div class="funkyradio-success">
-                <input type="radio" name="radio" id="2f"/>
-                <label for="2f">2F</label>
-            </div>
-            <div class="funkyradio-success">
-                <input type="radio" name="radio" id="2m"/>
-                <label for="2m">2M</label>
-            </div>
-            <div class="funkyradio-success">
-                <input type="radio" name="radio" id="3f"/>
-                <label for="3f">3F</label>
-            </div>
-            <div class="funkyradio-success">
-                <input type="radio" name="radio" id="3m"/>
-                <label for="3m">3M</label>
-            </div>
-            <div class="funkyradio-success">
-                <input type="radio" name="radio" id="4f"/>
-                <label for="4f">4F</label>
-            </div>
-            <div class="funkyradio-success">
-                <input type="radio" name="radio" id="4m"/>
-                <label for="4m">4M</label>
+        </div>
+        <div class="tab-pane fade" id="toyota" role="tabpanel" aria-labelledby="profile-tab">
+            <div class="row">
+                <div class="col-md-12 col-sm-12">
+                    <div class="funkyradio" id="toyota_radios">
+                        <div class="funkyradio-success">
+                            <input type="radio" name="toyota_radio" id="toyota_1m"/>
+                            <label for="toyota_1m">1M</label>
+                        </div>
+                        <div class="funkyradio-success">
+                            <input type="radio" name="toyota_radio" id="toyota_2f"/>
+                            <label for="toyota_2f">2F</label>
+                        </div>
+                        <div class="funkyradio-success">
+                            <input type="radio" name="toyota_radio" id="toyota_2m"/>
+                            <label for="toyota_2m">2M</label>
+                        </div>
+                        <div class="funkyradio-success">
+                            <input type="radio" name="toyota_radio" id="toyota_3f"/>
+                            <label for="toyota_3f">3F</label>
+                        </div>
+                        <div class="funkyradio-success">
+                            <input type="radio" name="toyota_radio" id="toyota_3m"/>
+                            <label for="toyota_3m">3M</label>
+                        </div>
+                        <div class="funkyradio-success">
+                            <input type="radio" name="toyota_radio" id="toyota_4f"/>
+                            <label for="toyota_4f">4F</label>
+                        </div>
+                        <div class="funkyradio-success">
+                            <input type="radio" name="toyota_radio" id="toyota_4m"/>
+                            <label for="toyota_4m">4M</label>
+                        </div>
+                    </div>
+                </div>
             </div>
         </div>
     </div>
 </div>
+
 
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-gtEjrD/SeCtmISkJkNUaaKMoLD0//ElJ19smozuHV6z3Iehds+3Ulb9Bn9Plx0x4"
         crossorigin="anonymous"></script>
 <script>
     const api_url = '/timpark/api'
+    // const api_url = 'http://localhost:3000/timpark/api'
 
     function httpGetAsync(theUrl, callback) {
         var xmlHttp = new XMLHttpRequest();
@@ -251,16 +315,30 @@
 
     httpGetAsync(`${api_url}/get`, res => {
         console.log(res, 'current')
-        document.getElementById(res).checked = true
+        const vals = JSON.parse(res)
+
+        // set radio values
+        document.getElementById(vals['mercedes']).checked = true
+        document.getElementById('toyota_' + vals['toyota']).checked = true
 
         // Set new val if radio changes
-        let rad = document.getElementsByName('radio');
+        let rad = document.querySelectorAll('[name="radio"], [name="toyota_radio"]');
         let prev = null;
         for (var i = 0; i < rad.length; i++) {
             rad[i].addEventListener('change', function () {
                 if (this !== prev) prev = this;
                 console.log(this.id, this.value)
-                httpGetAsync(`${api_url}/set?floor=${this.id}`, res => {
+
+                let car, floor
+                if (this.id.includes('toyota')) {
+                    car = 'toyota'
+                    floor = this.id.replace('toyota_', '')
+                } else {
+                    car = 'mercedes'
+                    floor = this.id
+                }
+
+                httpGetAsync(`${api_url}/set?floor=${floor}&car=${car}`, res => {
                     console.log(res)
                     window.navigator.vibrate(200)
                 })
@@ -269,11 +347,11 @@
     })
 
     // PWA
-    if ('serviceWorker' in navigator) {
-        window.addEventListener('load', () => {
-            navigator.serviceWorker.register('/service-worker.js');
-        });
-    }
+    // if ('serviceWorker' in navigator) {
+    //     window.addEventListener('load', () => {
+    //         navigator.serviceWorker.register('/service-worker.js');
+    //     });
+    // }
 
 </script>
 </body>
