--- a/public/index.html
+++ b/public/index.html
@@ -13,7 +13,7 @@
 
 
     <!--    PWA-->
-    <meta name="theme-color" content="#5cb85c">
+    <meta name="theme-color" content="#FFFFFF">
     <link rel="manifest" href="manifest.json">
     <link rel="apple-touch-icon" href="icons/apple-icon-180.png">
     <meta name="apple-mobile-web-app-capable" content="yes">
