--- a/public/index.html
+++ b/public/index.html
@@ -219,7 +219,7 @@
             </button>
         </li>
     </ul>
-    <div class="tab-content" id="myTabContent">
+    <div class="tab-content pt-3" id="myTabContent">
         <div class="tab-pane fade show active" id="mercedes" role="tabpanel" aria-labelledby="home-tab">
             <div class="row">
                 <div class="col-md-12 col-sm-12">
