--- a/public/index.html
+++ b/public/index.html
@@ -72,6 +72,9 @@
 
     <!--    end PWA-->
     <style>
+        .text {
+            font-family: Avenir, Helvetica, Arial, sans-serif;
+        }
 
         .funkyradio div {
             clear: both;
@@ -222,6 +225,9 @@
     <div class="tab-content pt-3" id="myTabContent">
         <div class="tab-pane fade show active" id="mercedes" role="tabpanel" aria-labelledby="home-tab">
             <div class="row">
+                <div class="col-12 text" style="text-align: center" id="m_date"></div>
+            </div>
+            <div class="row">
                 <div class="col-md-12 col-sm-12">
                     <div class="funkyradio" id="radios">
                         <div class="funkyradio-success">
@@ -257,6 +263,9 @@
             </div>
         </div>
         <div class="tab-pane fade" id="toyota" role="tabpanel" aria-labelledby="profile-tab">
+            <div class="row">
+                <div class="col-12 text" style="text-align: center" id="t_date"></div>
+            </div>
             <div class="row">
                 <div class="col-md-12 col-sm-12">
                     <div class="funkyradio" id="toyota_radios">
@@ -299,9 +308,12 @@
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-gtEjrD/SeCtmISkJkNUaaKMoLD0//ElJ19smozuHV6z3Iehds+3Ulb9Bn9Plx0x4"
         crossorigin="anonymous"></script>
+<script src="luxon.min.js"></script>
 <script>
     const api_url = '/timpark/api'
     // const api_url = 'http://localhost:3000/timpark/api'
+
+    const DateTime = luxon.DateTime;
 
     function httpGetAsync(theUrl, callback) {
         var xmlHttp = new XMLHttpRequest();
@@ -317,9 +329,20 @@
         console.log(res, 'current')
         const vals = JSON.parse(res)
 
+        let m_vals = vals['mercedes'].split('-')
+        let m_val = m_vals[0]
+        let m_date = DateTime.fromJSDate(new Date(m_vals[1]))
+
+        let t_vals = vals['toyota'].split('-')
+        let t_val = t_vals[0]
+        let t_date = DateTime.fromJSDate(new Date(t_vals[1]))
+
+        document.getElementById('m_date').innerText = 'Last update: ' + m_date.toRelativeCalendar() + ' at ' + m_date.toLocaleString(DateTime.TIME_SIMPLE)
+        document.getElementById('t_date').innerText = 'Last update: ' + t_date.toRelativeCalendar() + ' at ' + t_date.toLocaleString(DateTime.TIME_SIMPLE)
+
         // set radio values
-        document.getElementById(vals['mercedes']).checked = true
-        document.getElementById('toyota_' + vals['toyota']).checked = true
+        document.getElementById(m_val).checked = true
+        document.getElementById('toyota_' + t_val).checked = true
 
         // Set new val if radio changes
         let rad = document.querySelectorAll('[name="radio"], [name="toyota_radio"]');
