--- a/public/index.html
+++ b/public/index.html
@@ -310,8 +310,8 @@
         crossorigin="anonymous"></script>
 <script src="luxon.min.js"></script>
 <script>
-    // const api_url = '/timpark/api'
-    const api_url = 'http://localhost:3000/timpark/api'
+    const api_url = '/parkwhere/api'
+    // const api_url = 'http://localhost:3000/parkwhere/api'
 
     const DateTime = luxon.DateTime;
     const Interval = luxon.Interval;
