--- a/public/index.html
+++ b/public/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0">
-    <title>TimPark</title>
+    <title>ParkWhere</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css" rel="stylesheet"
           integrity="sha384-+0n0xVW2eSR5OomGNYDnhzAbDsOXxcvSN1TPprVMTNDbiYZCxYbOOl7+AMvyTG2x" crossorigin="anonymous">
     <script src="https://kit.fontawesome.com/d097e88e4a.js" crossorigin="anonymous"></script>
@@ -314,7 +314,7 @@
     // const api_url = 'http://localhost:3000/parkwhere/api'
 
     const DateTime = luxon.DateTime;
-    const Interval = luxon.Interval;
+    // const Interval = luxon.Interval;
     const now = DateTime.now()
 
     function httpGetAsync(theUrl, callback) {
