--- a/public/index.html
+++ b/public/index.html
@@ -310,7 +310,7 @@
         crossorigin="anonymous"></script>
 <script src="luxon.min.js"></script>
 <script>
-    const api_url = '/parkwhere/api'
+    const api_url = 'http://tim835.ddns.net/parkwhere/api'
     // const api_url = 'http://localhost:3000/parkwhere/api'
 
     const DateTime = luxon.DateTime;
